--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-queue": "node dist/entry.js",
+    "start:server": "node dist/main.js",
+    "start:worker": "node dist/worker.js",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.13.0",
     "@types/throng": "^5.0.7",
     "typescript": "^5.4.5"
@@ -18,6 +20,7 @@
   "dependencies": {
     "bullmq": "^5.7.14",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "throng": "^5.0.0"
   }
 }
